# tcard

./: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  default.nix  deny.toml  flake.nix  install.sh  package.nix
.github/workflows/: releases.yml
src/: cli.rs  edit.rs  error.rs  lib.rs  main.rs  template.rs  vcard.rs
src/edit/: mod.rs  parse.rs  render.rs  tree.rs
src/template/: datetime.rs  line.rs  mod.rs  model.rs  util.rs
tests/: fixtures.rs
tests/data/: apple_contacts.all.toml  apple_contacts.vcf  calcard_altid.all.toml  calcard_altid.vcf  calcard_multi_card.all.toml  calcard_vcard4.all.toml  clean.all.toml  clean.vcf  ezvcard_evolution.all.toml  ezvcard_gmail.all.toml  ezvcard_outlook.all.toml  rfc6350_author.all.toml  two_cards.all.toml  two_cards.vcf
